--- a/source/brigtest/b_team_primer.html
+++ b/source/brigtest/b_team_primer.html
@@ -162,7 +162,7 @@ jkstrp(function(){
 
 
 
-<h2 class="sections_title">Sections</h2><div class="sections_inner"><ul><li><a href="brigtest.html#outer_page_4" data-first-page="4" data-section="1">Universal Definition of MI</a></li>
+<h2 class="sections_title">Table of Contents</h2><div class="sections_inner"><ul><li><a href="brigtest.html#outer_page_4" data-first-page="4" data-section="1">Universal Definition of MI</a></li>
 
 
 
