--- a/source/brigtest/b_team_primer.html
+++ b/source/brigtest/b_team_primer.html
@@ -1,5 +1,9 @@
 
-<!DOCTYPE HTML><html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:og="http://opengraphprotocol.org/schema/"><head prefix="og: http://ogp.me/ns# scribd-com: http://ogp.me/ns/apps/scribd-com#">
+<!DOCTYPE HTML>
+<head>
+
+
+<html lang="en" xml:lang="en" xmlns="http://www.w3.org/1999/xhtml" xmlns:fb="http://www.facebook.com/2008/fbml" xmlns:og="http://opengraphprotocol.org/schema/"><head prefix="og: http://ogp.me/ns# scribd-com: http://ogp.me/ns/apps/scribd-com#">
 <title>B-TeamPrimer</title>
 
 <link rel="apple-touch-icon-precomposed" href="/brigham.jpg" />
@@ -9,25 +13,20 @@
       <meta name="csrf-token" content="30a8b166b060bd71de612aa5d7e801c0d23f8322" />
     <meta content="Scribd" name="og:site_name" /><meta content="7981test" title="og:site_name" /><meta content="noindex, follow" name="robots" /><meta name="keywords" /><meta content="scribd-com:document" property="og:type" /><meta content="http://www.scribd.com/doc/138573191/7981test?secret_password=1rkx7gi11nu0c3hqbv71" property="og:url" /><meta content="summary" name="twitter:card" /><meta content="http://www.scribd.com/doc/138573191/7981test?secret_password=1rkx7gi11nu0c3hqbv71" name="twitter:url" /><meta content="7981test" name="twitter:title" /><meta content="this is a test" name="twitter:description" /><meta content="@Scribd" name="twitter:site" /><meta content="14167997" name="twitter:site:id" /><script type="text/javascript">var NREUMQ=NREUMQ||[];NREUMQ.push(["mark","firstbyte",new Date().getTime()]);</script>
 
-<!--[if lt IE 8]>
-<link href="http://s7.scribdassets.com/aggregated/css/read.css?1368736242" media="screen" rel="stylesheet" type="text/css" />
-<link href="http://s7.scribdassets.com/aggregated/css/chrome.css?1368736242" media="screen" rel="stylesheet" type="text/css" />
-<![endif]-->
-<!--[if gte IE 8]>
-<link href="http://s5.scribdassets.com/aggregated/css_img/read.css?1368736242" media="screen" rel="stylesheet" type="text/css" />
-<link href="http://s6.scribdassets.com/aggregated/css_img/chrome.css?1368736242" media="screen" rel="stylesheet" type="text/css" />
-<![endif]-->
-<!--[if !IE]> -->
+
 <link href="http://s5.scribdassets.com/aggregated/css_img/read.css?1368736242" media="screen" rel="stylesheet" type="text/css" />
 <link href="http://s6.scribdassets.com/aggregated/css_img/chrome.css?1368736242" media="screen" rel="stylesheet" type="text/css" />
 <!-- <![endif]-->
+
 
 <script type="text/javascript">
       window.Scribd = window.Scribd || {};
       Scribd.cdn_path = "http://s6.scribdassets.com/";
       Scribd.rails_env = "production";
     </script><!-- testing geoip ssi for ads --><script>if(!window.Scribd){window.Scribd={};}window.Scribd._geo_ssi_value="US";</script>
-<!-- end testing geoip ssi for ads --><script src="http://s7.scribdassets.com/aggregated/javascript/chrome.js?1368736242" type="text/javascript"></script><script type="text/javascript">
+<!-- end testing geoip ssi for ads --><script src="http://s7.scribdassets.com/aggregated/javascript/chrome.js?1368736242" type="text/javascript"></script>
+
+<script type="text/javascript">
   var _gaq = _gaq || [];
   _gaq.push(['_setAccount', "UA-443684-2"]);
   _gaq.push(['_setCustomVar', 1, 'logged_in', 'true', 1]);
@@ -46,19 +45,7 @@
         window['$perf'] = new Scribd.Perf();
         $perf.registerOnbeforeunload();
       </script><script type="text/javascript">$(document).on('Scribd:language_detected', Scribd.checkForOverrideLanguage);</script><link href="http://www.scribd.com/doc/138573191/7981test?secret_password=1rkx7gi11nu0c3hqbv71" hreflang="en" rel="alternate" /><link href="http://zh.scribd.com/doc/138573191/7981test?secret_password=1rkx7gi11nu0c3hqbv71" hreflang="zh" rel="alternate" /><link href="http://es.scribd.com/doc/138573191/7981test?secret_password=1rkx7gi11nu0c3hqbv71" hreflang="es" rel="alternate" /><link href="http://ar.scribd.com/doc/138573191/7981test?secret_password=1rkx7gi11nu0c3hqbv71" hreflang="ar" rel="alternate" /><link href="http://pt.scribd.com/doc/138573191/7981test?secret_password=1rkx7gi11nu0c3hqbv71" hreflang="pt" rel="alternate" /><link href="http://ja.scribd.com/doc/138573191/7981test?secret_password=1rkx7gi11nu0c3hqbv71" hreflang="ja" rel="alternate" /><link href="http://de.scribd.com/doc/138573191/7981test?secret_password=1rkx7gi11nu0c3hqbv71" hreflang="de" rel="alternate" /><link href="http://fr.scribd.com/doc/138573191/7981test?secret_password=1rkx7gi11nu0c3hqbv71" hreflang="fr" rel="alternate" /><link href="http://tr.scribd.com/doc/138573191/7981test?secret_password=1rkx7gi11nu0c3hqbv71" hreflang="tr" rel="alternate" /><link href="http://ru.scribd.com/doc/138573191/7981test?secret_password=1rkx7gi11nu0c3hqbv71" hreflang="ru" rel="alternate" /><link href="http://vi.scribd.com/doc/138573191/7981test?secret_password=1rkx7gi11nu0c3hqbv71" hreflang="vi" rel="alternate" /><link href="http://pl.scribd.com/doc/138573191/7981test?secret_password=1rkx7gi11nu0c3hqbv71" hreflang="pl" rel="alternate" /><link href="http://id.scribd.com/doc/138573191/7981test?secret_password=1rkx7gi11nu0c3hqbv71" hreflang="id" rel="alternate" /><link href="http://www.scribd.com/mobile/doc/138573191" media="only screen and (max-width: 640px)" rel="alternate" /><link href="http://www.scribd.com/mobile/doc/138573191" media="handheld" rel="alternate" />
-  <script type="text/javascript">
-    jkstrp(function(){
-      new Scribd.UI.FollowButton();
-     }, "Read::FollowButton");
-jkstrp(function(){ new Scribd.UI.DocumentSearch($("#autogen_id_642669418")); }, "Read::Search::Sidebar");
-jkstrp(function(){ Scribd.UI.setup_section_list($("#autogen_id_642671973")); }, "Read::SectionList");
-jkstrp(function(){  }, "Read::DocumentInfo");
-jkstrp(function(){ Scribd.UI.sidebar = new Scribd.UI.Sidebar($("#sidebar")); }, "Read::Sidebar");
-jkstrp(function(){
-      Scribd.UI.setup_doc({"scroll_to_page":null,"layout_format":"web","reflow_quality_good":false,"pmp_read":false});
-     }, "Read::Show");
 
-</script>
 
 
   <script type="text/javascript">
@@ -66,34 +53,10 @@ jkstrp(function(){
     I18n.locale = "en_US";
   </script>
 
-<script type="text/javascript">
-    Scribd.Ads.setAdLayouts();
 
-    if (false) {
-      trackEvent("AdTargeting", "SpecialCase", "AdultDocument", 0, false);
-    }
+ 
 
-    Scribd.Ads.enabled =
-      Scribd.Ads.attributes.AdLayout[0] !== 0 &&
-      true &&
-      document.location.protocol !== 'https';
-
-    window.writeScript = function(src) {
-      document.write('\x3Cscript type="text/javascript" src="'+src+'">\x3C/script>');
-    };
-
-
-      var googletag = googletag || {};
-      googletag.cmd = googletag.cmd || [];
-
-      (function() {
-        if(Scribd.Ads.loaded)
-          return;
-
-<noscript><iframe height="0" src="//www.googletagmanager.com/ns.html?id=GTM-ZWF6" style="display:none;visibility:hidden" width="0"></iframe></noscript><script type="text/javascript">
-        (function(w,d,s,l,i){w[l]=w[l]||[];w[l].push({'gtm.start':new Date().getTime(),event:'gtm.js'});var f=d.getElementsByTagName(s)[0], j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src='//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
- })(window,document,'script','dataLayer','GTM-ZWF6');
-      </script>
+</head>
 
 <div class="global_wrapper"><div class="newdoc" id="autogen_id_642661953"><div class="autogen_class_views_read_show_web newdoc" id="autogen_id_642662469"><div class="docpage_top">
 
@@ -158,6 +121,10 @@ jkstrp(function(){
 </script>
 
 <div class="outer_page_container">
+<form action="TODO">
+	<input class="search_area" type=search placeholder="Search Document" name="q">
+	<input type="submit">		
+</form>
 
 
 
