removed brigtest, updated about copy and image

--- a/source/404.html
+++ b/source/404.html
@@ -8,7 +8,6 @@ layout: page
 
 <p>
   Unfortunately the page you were looking for could not be found. It might have
-  been removed, lost or never existed. You can browse the
-  <a href="{{ root_url }}/blog/archives">archives</a> or go to the
+  been removed, lost or never existed. Return to the
   <a href="{{ root_url }}/">frontpage</a>.
 </p>
