--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
       </h5>
       <div class="divider">~~~~~</div>
       
-      <h5 class="publisher">Made in San Francisco<br />
-      (c) 2017</h5>
+      <h5 class="publisher">Made in San Francisco<br /><a href="http://wdaher.com/">inspiration</a><br />(c) 2017</h5>
     </div>
   </div>
 </div>
