--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
       <br>
       <br>
       <p> Hello 👋🏻, </p>
-      <p>Welcome to Marcio's handcoded homepage! I'm from Brazil and I work in the tech industry. I lived 10+ years in San Francisco, and I now live in New England with my amazing family. You can follow me on <a target="_blank" href="https://twitter.com/marciovm" >Twitter</a>, see my bio on <a target="_blank" href="https://linkedin.com/in/marciovm">LinkedIn</a>, and see my <a target="_blank" href="https://scholar.google.com/citations?user=5eu4WWIAAAAJ&hl=en">scientist profile</a> before I escaped academia.</p>
+      <p>Welcome to Marcio's handcoded homepage! I'm from Brazil and I work in the tech industry. I lived 10+ years in San Francisco, and I now live in New England with my amazing family. You can follow me on <a target="_blank" href="https://twitter.com/marciovm" >Twitter</a>, see my bio on <a target="_blank" href="https://linkedin.com/in/marciovm">LinkedIn</a>, and see my <a target="_blank" href="https://scholar.google.com/citations?user=5eu4WWIAAAAJ&hl=en">science roots</a>.</p>
       <p>Some fun facts about me:</p>
       <ul>
         <li>My oldest son is named Enzo, after the driver and entrepreneur Enzo Ferrari. My youngest is Maxwell, after the great scientist James Maxwell. 
