revamp to nyc photo

--- a/index.html
+++ b/index.html
@@ -3,13 +3,13 @@
 <head>
     <!-- Required meta tags -->
     <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">    
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--  CSS -->
-    <link href="css/marciovm.css" rel="stylesheet">      
+    <link href="css/marciovm.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
    <!-- Add icon library -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
- 
+
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-15152296-1"></script>
     <script>
@@ -24,35 +24,16 @@
 
 <body>
   <div class="container-fluid">
-    <div class="row-fluid">
+    <div class="row-fluid white-background">
       <div class="span12">
-        <br>
-        <br>
-        <p> Hello 👋🏻, </p>
-        <p>Welcome to my handcoded homepage!</p>
-        <p>I work for the Chan Zuckerberg Initiative, buliding software tools for life scientists. I was born and raised in Brazil. I completed bioengineering degrees from UC Berkeley and MIT, then spent a decade helping build successful tech startups in San Francisco. I now live in New England with my wife Virginia and our amazing family. I'm passionate about helping people with technology and business.</p>
-        <p>Fun facts:</p>
-        <ul>
-          <li>My two boys are Enzo and Maxwell. Enzo is named after the race car driver and entrepreneur Enzo Ferrari, who founded the eponymous automaker. Maxwell is named after scientist James Clerk Maxwell, who first showed how electricity and magnetism are related.</li>          
-          <li>Popular essays I wrote: <a href="https://marciovm.com/i-want-a-github-of-science" target="_blank">We need a Github of Science</a>,  <a target="_blank" href="https://blog.usejournal.com/what-to-know-before-building-your-first-voice-skill-597c99141805">What to know before building your first voice skill</a>.</li>
-          <li>Offbeat recommendations: <a target="_blank" href="https://www.youtube.com/channel/UCYO_jab_esuFRV4b17AJtAw">3Blue1Brown</a>, <a target="_blank" href="https://www.youtube.com/watch?v=vN4U5FqrOdQ">iPhone keynote</a>, <a target="_blank" href="https://stratechery.com/">Stratechery</a>, <a target="_blank" href="https://twitter.com/alexstamos">Alex Stamos</a>.</li>
-          <li>I'm helping my semi-retired doctor dad build a health advice <a target="_blank" href="https://www.youtube.com/channel/UCeSgho1y8OYVg_XYP3LInLQ">YouTube channel</a> for the Brazilian market. Now at 13k subscribers and growing fast.</li>
-          <li>I held senior product roles in the early/growth years at Doximity and Dropbox. I learned the fine art of building and growing delightful, "bottoms-up" software products.</li>
-        </ul>
-        <p>If you're building something great, ping me on Twitter and let me know how I can help.</p>
-        <img src="marcio_mug_circle.png"/>
-        <br>
-        <p>-Marcio von Muhlen 🇧🇷🇺🇸</p>
-        <a target="_blank" href="https://www.twitter.com/marciovm" class="fa fa-twitter"></a>        
+        <a target="_blank" href="https://www.twitter.com/marciovm" class="fa fa-twitter"></a>
         <a target="_blank" href="https://www.facebook.com/marciovm" class="fa fa-facebook"></a>
         <a target="_blank" href="https://www.instagram.com/marciovm/" class="fa fa-instagram"></a>
         <a target="_blank" href="https://github.com/marciovm" class="fa fa-github"></a>
         <a target="_blank" href="https://www.linkedin.com/in/marciovm" class="fa fa-linkedin"></a>
-        <a target="_blank" href="https://www.quora.com/profile/Marcio-von-Muhlen" class="fa fa-quora"></a>        
+        <a target="_blank" href="https://www.quora.com/profile/Marcio-von-Muhlen" class="fa fa-quora"></a>
       </div>
-      <div>  
-          <p class="publisher">Made in New England<br />(c) 2020</p>
-      </div>
+      <p class="photo-credit">Marcio's homepage. Photo by <a href="https://unsplash.com/photos/BQ1S5jS20S0">Brett Jordan</a>.</p>
     </div>
   </div>
 </BODY>
