--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
    <!-- Add icon library -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
+    <link rel="icon" type="image/png" sizes="96x96" href="https://marciovm.com/public/favicon.ico">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-15152296-1"></script>
     <script>
