--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--  CSS -->
-    <link href="css/marciovm.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
+    <link href="css/marciovm.css" rel="stylesheet">  
     <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
+   <!-- Add icon library -->
+   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <link rel="icon" type="image/png" sizes="96x96" href="https://marciovm.com/public/favicon.ico">
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-15152296-1"></script>
