add some content

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!--  CSS -->
-    <link href="css/marciovm.css" rel="stylesheet">  
+    <link href="css/marciovm.css" rel="stylesheet">
     <link href='https://fonts.googleapis.com/css?family=Muli' rel='stylesheet' type='text/css'>
    <!-- Add icon library -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -27,14 +27,13 @@
   <div class="container-fluid">
     <div class="row-fluid white-background">
       <div class="span12">
+        <a href="https://marciovm.com/posts" class="fa fa-map-signs"></a>
         <a target="_blank" href="https://www.twitter.com/marciovm" class="fa fa-twitter"></a>
-        <a target="_blank" href="https://www.facebook.com/marciovm" class="fa fa-facebook"></a>
         <a target="_blank" href="https://www.instagram.com/marciovm/" class="fa fa-instagram"></a>
         <a target="_blank" href="https://github.com/marciovm" class="fa fa-github"></a>
         <a target="_blank" href="https://www.linkedin.com/in/marciovm" class="fa fa-linkedin"></a>
-        <a target="_blank" href="https://www.quora.com/profile/Marcio-von-Muhlen" class="fa fa-quora"></a>
       </div>
-      <p class="photo-credit">Marcio's homepage. Photo by <a href="https://unsplash.com/photos/BQ1S5jS20S0">Brett Jordan</a>.</p>
+      <p class="photo-credit">Marcio's homepage. <a href="https://unsplash.com/photos/BQ1S5jS20S0">Photo credit</a>.</p>
     </div>
   </div>
 </BODY>
